# build-style-game

./: CMakeLists.txt  map.txt
include/: g_collision.h  g_data.h  g_game_state.h  g_loader.h  r_renderer.h  utils.h
src/: g_collision.c  g_game_state.c  game.c  r_renderer.c
